<resources>
    <string name="app_name">Satellites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="cost">Cost Per Launch</string>
    <string name="last_position">Last Position</string>
    <string name="satellites_dialog_text">Since this satellite is not active, the details of the satellite are not visible.</string>
    <string name="ok">OK</string>
    <string name="click_the_button_to_continue_the_application">Click the button to continue the application.</string>
    <string name="first_flight">First Flight</string>
    <string name="height">Height</string>
    <string name="coordinate_x">Coordinate X</string>
    <string name="coordinate_y">Coordinate Y</string>
</resources>